--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "mergesort_inplace": "cpp",
         "max_stocks_ith_day": "cpp",
-        "min_subsetsum_greater_than_other": "cpp"
+        "min_subsetsum_greater_than_other": "cpp",
+        "count_subsequences_product_less_k": "cpp",
+        "word_break": "cpp"
     }
 }
