--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "min_subsetsum_greater_than_other": "cpp",
         "count_subsequences_product_less_k": "cpp",
         "word_break": "cpp",
-        "min_cost_path_to_dest": "cpp"
+        "min_cost_path_to_dest": "cpp",
+        "mirror_tree": "cpp"
     }
 }
