--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "mirror_tree": "cpp",
         "vector": "cpp",
         "median_2sortedarray_equalsize": "c",
-        "double_helix_spoj": "cpp"
+        "double_helix_spoj": "cpp",
+        "shortest_path_landimes": "cpp"
     }
 }
